--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "mysql2": "^3.16.1",
+    "resend": "^6.9.1",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.5"
   },
